--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,22 @@
 ---
-import {Header} from "../components/header";
+import HomeSection from "../components/home-section";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
 import "../styles/shiny-cta.css";
-import FeatureSectionV3 from "../components/feature-section-v3";
+import FeatureSectionV2 from "../components/feature-section-v2";
 import AppSection from "../components/app-section";
 import FooterSection from "../components/footer-section";
 import { ReactLayout } from "../layouts/react-layout";
 import { HoverHalo } from "../components/hover-halo";
-import { SolarLayout } from "../components/solar"
 ---
 
 <Layout>
   <ReactLayout client:load>
     <>
-      <Header client:load/>
-      <SolarLayout client:load/>
-      <FeatureSectionV3 client:load />
+      <HoverHalo client:load />
+      <HomeSection client:load />
+      <FeatureSectionV2 client:load />
+      <AppSection client:load />
       <FooterSection client:load />
     </>
   </ReactLayout>
