--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -367,3 +367,21 @@ section[aria-label*="Notification"] {
   animation-iteration-count: infinite;
 }
 
+
+.scroll-bg {
+  width: 100%;
+  height: 100%;
+  background-image: url("/home/antex-text.svg");
+  background-repeat: repeat-x;
+  background-size: auto 200px;
+  animation: move-bg 10s linear infinite;
+}
+
+@keyframes move-bg {
+  from {
+    background-position: 0 center;
+  }
+  to {
+    background-position: -600px center;
+  }
+}
