chore: prettier and format all files

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
-import HomeSection from "../components/home-section";
-import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-import "../styles/shiny-cta.css";
-import FeatureSectionV2 from "../components/feature-section-v2";
-import AppSection from "../components/app-section";
-import FooterSection from "../components/footer-section";
-import { ReactLayout } from "../layouts/react-layout";
-import { HoverHalo } from "../components/hover-halo";
+import HomeSection from '../components/home-section'
+import Layout from '../layouts/Layout.astro'
+import '../styles/global.css'
+import '../styles/shiny-cta.css'
+import FeatureSectionV2 from '../components/feature-section-v2'
+import AppSection from '../components/app-section'
+import FooterSection from '../components/footer-section'
+import { ReactLayout } from '../layouts/react-layout'
+import { HoverHalo } from '../components/hover-halo'
 ---
 
 <Layout>
