--- a/src/pages/v2.astro
+++ b/src/pages/v2.astro
@@ -1,16 +1,16 @@
 ---
-import { Header } from "../components/header";
-import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
-import "../styles/shiny-cta.css";
-import FeatureSectionV3 from "../components/feature-section-v3";
-import { Faq } from "../components/faq";
-import FooterSection from "../components/footer-section-v2";
-import { ReactLayout } from "../layouts/react-layout";
-import { LaunchAd } from "../components/ads";
-import { SolarLayout } from "../components/solar";
-import { Partner } from "../components/partner"
-import { Funcs } from "../components/funcs"
+import { Header } from '../components/header'
+import Layout from '../layouts/Layout.astro'
+import '../styles/global.css'
+import '../styles/shiny-cta.css'
+import FeatureSectionV3 from '../components/feature-section-v3'
+import { Faq } from '../components/faq'
+import FooterSection from '../components/footer-section-v2'
+import { ReactLayout } from '../layouts/react-layout'
+import { LaunchAd } from '../components/ads'
+import { SolarLayout } from '../components/solar'
+import { Partner } from '../components/partner'
+import { Funcs } from '../components/funcs'
 ---
 
 <Layout>
