--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,30 +1,43 @@
 ---
-import { SeoMeta } from "../components/seo-meta";
+import { SeoMeta } from '../components/seo-meta'
 ---
 
 <!doctype html>
-<html lang="en" class="dark" data-mode="dark">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" media="(prefers-color-scheme: dark)" />
-		<link rel="icon" type="image/svg+xml" href="/favicon_dark.svg" media="(prefers-color-scheme: light)" />
-		<meta name="generator" content={Astro.generator} />
-		<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+<html lang='en' class='dark' data-mode='dark'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link
+      rel='icon'
+      type='image/svg+xml'
+      href='/favicon.svg'
+      media='(prefers-color-scheme: dark)'
+    />
+    <link
+      rel='icon'
+      type='image/svg+xml'
+      href='/favicon_dark.svg'
+      media='(prefers-color-scheme: light)'
+    />
+    <meta name='generator' content={Astro.generator} />
+    <link
+      href='https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap'
+      rel='stylesheet'
+    />
 
-		<SeoMeta />
-	</head>
-	<body class="app-root">
-		<slot />
-	</body>
+    <SeoMeta />
+  </head>
+  <body class='app-root'>
+    <slot />
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
