--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "./halo.css";
+@import 'tailwindcss';
+@import './halo.css';
 @plugin "tailwindcss-animate";
 
 @source "./{components}/**/*.tsx";
@@ -10,7 +10,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
-:root{
+:root {
   --font-size: 16px;
   --tv-font-size: 12;
   @media (width < 48rem /* 768px */) {
@@ -201,31 +201,30 @@
   }
   body {
     font-variant-numeric: tabular-nums;
-    font-feature-settings: "tnum";
+    font-feature-settings: 'tnum';
     @apply bg-background text-foreground text-xs;
     /* 使用 Space Grotesk 字体 */
     font-family:
-      "Space Grotesk",
-      "Space Grotesk Fallback",
+      'Space Grotesk',
+      'Space Grotesk Fallback',
       -apple-system,
-      "system-ui",
+      'system-ui',
       Roboto,
       Arial,
       sans-serif;
   }
 
-  .pc{
-    @apply !hidden md:!flex
+  .pc {
+    @apply !hidden md:!flex;
   }
-  .sp{
-    @apply flex md:!hidden
+  .sp {
+    @apply flex md:!hidden;
   }
 }
 html,
 body {
   height: 100%;
   margin: 0;
-
 }
 
 /* business extended variables */
@@ -352,12 +351,13 @@ body {
 }
 
 /* fix sonner toast pointer-events */
-section[aria-label*="Notification"] {
+section[aria-label*='Notification'] {
   pointer-events: all !important;
 }
 
 @keyframes float {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(-5%);
   }
   50% {
@@ -366,7 +366,8 @@ section[aria-label*="Notification"] {
 }
 
 @keyframes pulse-scale {
-  0%, 100% {
+  0%,
+  100% {
     transform: scale(1);
     filter: blur(3px);
   }
@@ -377,15 +378,19 @@ section[aria-label*="Notification"] {
 }
 
 @keyframes gradient-slide {
-  0% { background-position: 0% 50% }
-  100% { background-position: 200% 50% }
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
 }
 
-.gradient-slide{
+.gradient-slide {
   animation: gradient-slide 3s linear infinite;
 }
 
-.nav-item{
+.nav-item {
   position: relative;
 }
 
@@ -394,9 +399,9 @@ section[aria-label*="Notification"] {
   content: '';
   position: absolute;
   top: 0;
-  width: 1px;           /* 竖线宽度 */
-  height: 0;            /* 初始高度 0 */
-  background: var(--border);     /* 竖线颜色 */
+  width: 1px; /* 竖线宽度 */
+  height: 0; /* 初始高度 0 */
+  background: var(--border); /* 竖线颜色 */
   transition: height 0.2s ease;
 }
 
@@ -416,8 +421,12 @@ section[aria-label*="Notification"] {
 }
 
 @keyframes solar-rotate {
-  from { transform: rotate(var(--start, 0deg)); }
-  to   { transform: rotate(var(--to, 0deg)); }
+  from {
+    transform: rotate(var(--start, 0deg));
+  }
+  to {
+    transform: rotate(var(--to, 0deg));
+  }
 }
 .solar-rotator {
   transform-origin: center center;
@@ -430,7 +439,7 @@ section[aria-label*="Notification"] {
 .scroll-bg {
   width: 100%;
   height: 100%;
-  background-image: url("/home/antex-text.svg");
+  background-image: url('/home/antex-text.svg');
   background-repeat: repeat-x;
   background-size: auto 200px;
   animation: move-bg 10s linear infinite;
@@ -464,10 +473,20 @@ section[aria-label*="Notification"] {
 }
 
 .glow-effect {
-  background-image: conic-gradient(from var(--from-turn), var(--start-color),  var(--via-color),  var(--via-color) ,  var(--via-color),  var(--start-color) 1turn);
-  transition: --from-turn 0.5s linear,--start-color 0.5s linear,--via-color 0.5s linear;
+  background-image: conic-gradient(
+    from var(--from-turn),
+    var(--start-color),
+    var(--via-color),
+    var(--via-color),
+    var(--via-color),
+    var(--start-color) 1turn
+  );
+  transition:
+    --from-turn 0.5s linear,
+    --start-color 0.5s linear,
+    --via-color 0.5s linear;
 }
-.glow-effect:after{
+.glow-effect:after {
   content: '';
   position: absolute;
   inset: 2px;
@@ -475,10 +494,9 @@ section[aria-label*="Notification"] {
   border-radius: inherit;
 }
 .glow-effect:hover {
-
-  --from-turn:0.125turn;
-  --start-color:#6451fb;
-  --via-color:#000;
+  --from-turn: 0.125turn;
+  --start-color: #6451fb;
+  --via-color: #000;
 }
 
 @layer base {
