--- a/src/styles/shiny-cta.css
+++ b/src/styles/shiny-cta.css
@@ -10,25 +10,25 @@
 }
 
 @property --gradient-angle {
-  syntax: "<angle>";
+  syntax: '<angle>';
   initial-value: 0deg;
   inherits: false;
 }
 
 @property --gradient-angle-offset {
-  syntax: "<angle>";
+  syntax: '<angle>';
   initial-value: 0deg;
   inherits: false;
 }
 
 @property --gradient-percent {
-  syntax: "<percentage>";
+  syntax: '<percentage>';
   initial-value: 5%;
   inherits: false;
 }
 
 @property --gradient-shine {
-  syntax: "<color>";
+  syntax: '<color>';
   initial-value: white;
   inherits: false;
 }
@@ -51,13 +51,21 @@
   color: var(--shiny-cta-fg);
   background:
     linear-gradient(var(--shiny-cta-bg), var(--shiny-cta-bg)) padding-box,
-    conic-gradient(from calc(var(--gradient-angle) - var(--gradient-angle-offset)), transparent, var(--shiny-cta-highlight) var(--gradient-percent), var(--gradient-shine) calc(var(--gradient-percent) * 2), var(--shiny-cta-highlight) calc(var(--gradient-percent) * 3), transparent calc(var(--gradient-percent) * 4)) border-box;
+    conic-gradient(
+        from calc(var(--gradient-angle) - var(--gradient-angle-offset)),
+        transparent,
+        var(--shiny-cta-highlight) var(--gradient-percent),
+        var(--gradient-shine) calc(var(--gradient-percent) * 2),
+        var(--shiny-cta-highlight) calc(var(--gradient-percent) * 3),
+        transparent calc(var(--gradient-percent) * 4)
+      )
+      border-box;
   box-shadow: inset 0 0 0 1px var(--shiny-cta-bg-subtle);
 
   &::before,
   &::after,
   span::before {
-    content: "";
+    content: '';
     pointer-events: none;
     position: absolute;
     inset-inline-start: 50%;
@@ -78,10 +86,20 @@
   --space: calc(var(--position) * 2);
   width: var(--size);
   height: var(--size);
-  background: radial-gradient(circle at var(--position) var(--position), white calc(var(--position) / 4), transparent 0) padding-box;
+  background: radial-gradient(
+      circle at var(--position) var(--position),
+      white calc(var(--position) / 4),
+      transparent 0
+    )
+    padding-box;
   background-size: var(--space) var(--space);
   background-repeat: space;
-  mask-image: conic-gradient(from calc(var(--gradient-angle) + 45deg), black, transparent 10% 90%, black);
+  mask-image: conic-gradient(
+    from calc(var(--gradient-angle) + 45deg),
+    black,
+    transparent 10% 90%,
+    black
+  );
   border-radius: inherit;
   opacity: 0.4;
   z-index: -1;
@@ -92,7 +110,12 @@
   --animation: shimmer linear infinite;
   width: 100%;
   aspect-ratio: 1;
-  background: linear-gradient(-50deg, transparent, var(--shiny-cta-highlight), transparent);
+  background: linear-gradient(
+    -50deg,
+    transparent,
+    var(--shiny-cta-highlight),
+    transparent
+  );
   mask-image: radial-gradient(circle at bottom, transparent 40%, black);
   opacity: 0.6;
 }
@@ -113,7 +136,8 @@
 .shiny-cta {
   --transition: 800ms cubic-bezier(0.25, 1, 0.5, 1);
   transition: var(--transition);
-  transition-property: --gradient-angle-offset, --gradient-percent, --gradient-shine;
+  transition-property:
+    --gradient-angle-offset, --gradient-percent, --gradient-shine;
 
   &,
   &::before,
