--- a/src/pages/v2.astro
+++ b/src/pages/v2.astro
@@ -20,7 +20,7 @@ import { Funcs } from '../components/funcs'
       <SolarLayout client:load />
       <FeatureSectionV3 client:load />
       <Funcs client:load />
-      <Partner />
+      <!-- <Partner /> -->
       <Faq client:load />
       <LaunchAd />
       <FooterSection client:load />
