--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,18 @@ import { SeoMeta } from '../components/seo-meta'
     />
 
     <SeoMeta />
+    <!-- Google tag (gtag.js) -->
+    <script async src='https://www.googletagmanager.com/gtag/js?id=G-7MXH2JY0Y5'
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-7MXH2JY0Y5')
+    </script>
   </head>
   <body class='app-root'>
     <slot />
